--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -890,7 +890,7 @@
    "source": [
     "This table shows the individual parser statistics. Comparing the unique right predictions you explore that the steven parser doesn't predict so often relations, that weren't also predicted by the others. On the other hand, oslopots and ecnuncs have a lot of these unique right predictions. Due to the fact, that we only had the sense prediction part of the challenge we have to exclude the \"not mapped\" relations, because each relation span is the same.\n",
     "\n",
-    "If you look on the right predictions for each sense, it seems that they more or less predict the same amount of right predictions. "
+    "If you look on the right predictions for each sense, it seems that oslopots and ecnucs have a higher accuracy in predicting senses compared to their overall predictions."
    ]
   },
   {
@@ -1147,6 +1147,13 @@
    "source": [
     "print(\"Two Parser Agreement\")\n",
     "sense_df[df_columns[-len(best3_sense_zip_names)*2:]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the combination with the steven parser only have one third right predictions compared to the overall predictions, the combination of oslopots and ecnucs gets around one half of them. Considering this fact, we have to say that oslopots and ecnucs have a marginally difference between their predictions."
    ]
   },
   {
@@ -2079,6 +2086,17 @@
     "    print(\"{}: {}\".format(ind,sense))\n",
     "\n",
     "transposed_reliability_df.style.apply(highlight_max,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each column represent a sense, while each row shows the reliability of each parser to predict the corresponding sense.\n",
+    "\n",
+    "First, we have to exclude the comparison and expansion relation, because the parser always predicted a more specific relation sense for the relations. Second, the gw0 parser only predict certain relations, while all the others try to predict all of them.\n",
+    "\n",
+    "Like expected the oslopots parser has the highest reliability for most of the sense. Nevertheless, you can see that for some senses (e.g. Expansion.Alternative,Comparison.ConcessionContingency.Cause.Result,...) other parser have a higher probability to predict these sense right. Therefore, it is justified to explore different voting systems for the parsers."
    ]
   },
   {
