Same Wrong Predictions

--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,8 @@
     "    \n",
     "    #All combination of parser outputs e.g. (parser1,parser2),(parser2,parser3),(parser1,parser3)\n",
     "    parser_comb = list(itertools.combinations([i for i in range(1,len_parser+1)],2))\n",
+    "    \n",
+    "    same_wrong_predictions = []\n",
     "    \n",
     "    for sense in set_senses:\n",
     "        \n",
@@ -130,6 +132,7 @@
     "                    \n",
     "                    #all same wrong sense\n",
     "                    if len(set(list(sense_comb[1:]))) == 1:\n",
+    "                        same_wrong_predictions += [sense_comb]\n",
     "                        equal_wrong_parsing += 1\n",
     "                        \n",
     "                #at least one correct\n",
@@ -205,6 +208,10 @@
     "        for string in [\"{}/{}: both right\",\"{}/{}: total pred\"]\n",
     "        \n",
     "    ]\n",
+    "    \n",
+    "    print(\"Statistic on equal wrong predictions\")\n",
+    "    for key, value in Counter(same_wrong_predictions).most_common(10):\n",
+    "        print(\"Gold: {} \\n Pred: {} : {} \\n\".format(key[0],key[1],value))\n",
     "\n",
     "\n",
     "    return pd.DataFrame(\n",
@@ -255,12 +262,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistic on equal wrong predictions\n",
+      "Gold: Comparison.Contrast \n",
+      " Pred: EntRel : 10 \n",
+      "\n",
+      "Gold: Temporal.Asynchronous.Succession \n",
+      " Pred: Temporal.Synchrony : 10 \n",
+      "\n",
+      "Gold: Expansion.Conjunction \n",
+      " Pred: EntRel : 9 \n",
+      "\n",
+      "Gold: Expansion.Restatement \n",
+      " Pred: EntRel : 7 \n",
+      "\n",
+      "Gold: Comparison.Contrast \n",
+      " Pred: Expansion.Conjunction : 5 \n",
+      "\n",
+      "Gold: Contingency.Condition \n",
+      " Pred: Temporal.Synchrony : 5 \n",
+      "\n",
+      "Gold: Comparison.Contrast \n",
+      " Pred: Comparison.Concession : 4 \n",
+      "\n",
+      "Gold: Contingency.Cause.Result \n",
+      " Pred: EntRel : 4 \n",
+      "\n",
+      "Gold: Contingency.Cause.Reason \n",
+      " Pred: Temporal.Synchrony : 4 \n",
+      "\n",
+      "Gold: Comparison.Concession \n",
+      " Pred: Comparison.Contrast : 3 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Create Statistics\n",
     "sense_df,df_columns = sense_statistics2(best3_sense_zip,best3_sense_zip_names,best3_not_mappable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We printed out the equal wrong prediction relations (the 10 most common mistakes). As you can see, a lot of these wrong predictions are EntRel. That could be explained by the absence of a the real knowledge of the specific relation indicators. Thereby, the parsers only recognize the entities and misses the real discourse sense.\n",
+    "\n",
+    "On the other hand, the wrong prediction of \"Temporal.Synchrony\" compared to \"Temporal.Asynchronous.Succession\" are explainable by the same category \"Temporal\". The parsers already predicted the right overall category and only missed the specific relation sense."
    ]
   },
   {
