--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -164,6 +164,7 @@
     "                    \n",
     "                    #at least one correct\n",
     "                    if sense_comb[p_comb[0]] == sense or sense_comb[p_comb[1]] == sense:\n",
+    "                        print(sense_comb)\n",
     "                        double_parser_stats[p_comb][1] += 1\n",
     "        \n",
     "        #predicted relations without mapped gold relation\n",
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +546,7 @@
        "15         76            3                    61  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +929,7 @@
        "15                   4                  51                  88  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1194,7 @@
        "15                           40                           60  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
