--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,6 @@
     "                    \n",
     "                    #at least one correct\n",
     "                    if sense_comb[p_comb[0]] == sense or sense_comb[p_comb[1]] == sense:\n",
-    "                        print(sense_comb)\n",
     "                        double_parser_stats[p_comb][1] += 1\n",
     "        \n",
     "        #predicted relations without mapped gold relation\n",
@@ -206,7 +205,7 @@
     "        \n",
     "    ]+[\n",
     "        string.format(parser_names[ind1-1],parser_names[ind2-1]) for ind1,ind2 in parser_comb\n",
-    "        for string in [\"{}/{}: both right\",\"{}/{}: total pred\"]\n",
+    "        for string in [\"{}/{}: both right\",\"{}/{}: at least one right\"]\n",
     "        \n",
     "    ]\n",
     "    \n",
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +545,7 @@
        "15         76            3                    61  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +928,7 @@
        "15                   4                  51                  88  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -982,11 +981,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>steven/oslopots: both right</th>\n",
-       "      <th>steven/oslopots: total pred</th>\n",
+       "      <th>steven/oslopots: at least one right</th>\n",
        "      <th>steven/ecnucs: both right</th>\n",
-       "      <th>steven/ecnucs: total pred</th>\n",
+       "      <th>steven/ecnucs: at least one right</th>\n",
        "      <th>oslopots/ecnucs: both right</th>\n",
-       "      <th>oslopots/ecnucs: total pred</th>\n",
+       "      <th>oslopots/ecnucs: at least one right</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1139,62 +1138,62 @@
        "</div>"
       ],
       "text/plain": [
-       "    steven/oslopots: both right  steven/oslopots: total pred  \\\n",
-       "0                             0                            0   \n",
-       "1                           138                          304   \n",
-       "2                            15                           35   \n",
-       "3                            23                           37   \n",
-       "4                             4                           13   \n",
-       "5                            28                           47   \n",
-       "6                            36                           98   \n",
-       "7                             0                            0   \n",
-       "8                             1                            5   \n",
-       "9                            22                           44   \n",
-       "10                           35                           51   \n",
-       "11                            2                            3   \n",
-       "12                          154                          274   \n",
-       "13                           90                          189   \n",
-       "14                            1                           42   \n",
-       "15                           22                           52   \n",
+       "    steven/oslopots: both right  steven/oslopots: at least one right  \\\n",
+       "0                             0                                    0   \n",
+       "1                           138                                  304   \n",
+       "2                            15                                   35   \n",
+       "3                            23                                   37   \n",
+       "4                             4                                   13   \n",
+       "5                            28                                   47   \n",
+       "6                            36                                   98   \n",
+       "7                             0                                    0   \n",
+       "8                             1                                    5   \n",
+       "9                            22                                   44   \n",
+       "10                           35                                   51   \n",
+       "11                            2                                    3   \n",
+       "12                          154                                  274   \n",
+       "13                           90                                  189   \n",
+       "14                            1                                   42   \n",
+       "15                           22                                   52   \n",
        "\n",
-       "    steven/ecnucs: both right  steven/ecnucs: total pred  \\\n",
-       "0                           0                          0   \n",
-       "1                         123                        286   \n",
-       "2                          15                         51   \n",
-       "3                          21                         36   \n",
-       "4                           3                         13   \n",
-       "5                          15                         55   \n",
-       "6                          29                         95   \n",
-       "7                           0                          0   \n",
-       "8                           1                          4   \n",
-       "9                          16                         42   \n",
-       "10                         32                         48   \n",
-       "11                          1                          2   \n",
-       "12                        146                        274   \n",
-       "13                         64                        158   \n",
-       "14                          1                         57   \n",
-       "15                         18                         58   \n",
+       "    steven/ecnucs: both right  steven/ecnucs: at least one right  \\\n",
+       "0                           0                                  0   \n",
+       "1                         123                                286   \n",
+       "2                          15                                 51   \n",
+       "3                          21                                 36   \n",
+       "4                           3                                 13   \n",
+       "5                          15                                 55   \n",
+       "6                          29                                 95   \n",
+       "7                           0                                  0   \n",
+       "8                           1                                  4   \n",
+       "9                          16                                 42   \n",
+       "10                         32                                 48   \n",
+       "11                          1                                  2   \n",
+       "12                        146                                274   \n",
+       "13                         64                                158   \n",
+       "14                          1                                 57   \n",
+       "15                         18                                 58   \n",
        "\n",
-       "    oslopots/ecnucs: both right  oslopots/ecnucs: total pred  \n",
-       "0                             0                            0  \n",
-       "1                           188                          307  \n",
-       "2                            27                           55  \n",
-       "3                            28                           37  \n",
-       "4                            10                           13  \n",
-       "5                            24                           55  \n",
-       "6                            58                          116  \n",
-       "7                             0                            0  \n",
-       "8                             2                            5  \n",
-       "9                            31                           43  \n",
-       "10                           41                           51  \n",
-       "11                            1                            3  \n",
-       "12                          202                          284  \n",
-       "13                          103                          194  \n",
-       "14                           12                           83  \n",
-       "15                           40                           60  "
+       "    oslopots/ecnucs: both right  oslopots/ecnucs: at least one right  \n",
+       "0                             0                                    0  \n",
+       "1                           188                                  307  \n",
+       "2                            27                                   55  \n",
+       "3                            28                                   37  \n",
+       "4                            10                                   13  \n",
+       "5                            24                                   55  \n",
+       "6                            58                                  116  \n",
+       "7                             0                                    0  \n",
+       "8                             2                                    5  \n",
+       "9                            31                                   43  \n",
+       "10                           41                                   51  \n",
+       "11                            1                                    3  \n",
+       "12                          202                                  284  \n",
+       "13                          103                                  194  \n",
+       "14                           12                                   83  \n",
+       "15                           40                                   60  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
